# summarizer1

VideoSummarizer/: app.py  optimize_deployment.md  pdf_generator.py  pyproject.toml  replit.md  test_upload.py  utils.py  video_compressor.py  video_processor.py
